# src/main/java/com/market/member/api/CustomerController.java
@@ -15,7 +15,7 @@ import org.springframework.web.bind.annotation.*;
 import java.util.List;
 
 @RestController
-@RequestMapping("/v1/member/customers")
+@RequestMapping("/api/v1/member/customers")
 @RequiredArgsConstructor
 public class CustomerController {
 
